2007-07-23  Mukund Sivaraman  <muks@mukund.org>

	* README: Use ~/.gimp-2.3 instead of ~/.gimp-2.2.

2007-07-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.[ch]
	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print-settings.[ch]: removed image_ID from the
	PrintData struct and made sure that the parasites are read from
	and attached to the original image, not the export image.

2007-07-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: don't add an alpha channel.

	* plug-ins/print/print-draw-page.c: always use CAIRO_FORMAT_RGB24.

2007-07-23  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection-construct.c: minor code cleanup.

2007-07-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c (print_image): only delete the image if
	gimp_export_image() actually created a new one.

	* plug-ins/print/print-page-layout.c: some more dialog layout tweaks.

2007-07-23  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactiongroup.[ch]: added convenience function
	gimp_action_group_activate_action().

2007-07-20  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/tga.c (ReadImage): added support for reading
	indexed TGA images with transparency information in the colormap.
	These images are now promoted to RGBA.  Fixes bug #445559.
	(save_image): save INDEXEDA images correctly instead of saving
	uninitialized tile data to the file.

2007-07-20  Sven Neumann  <sven@gimp.org>

	Applied another patch from Stefan Röllin:

	* plug-ins/print/print-page-layout.c: align buttons.

2007-07-20  Sven Neumann  <sven@gimp.org>

	* app/text/gimptext.c (gimp_text_set_property): don't call strlen
	on a NULL font name.

2007-07-20  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: fixed a gtk-doc comment.

2007-07-20  Sven Neumann  <sven@gimp.org>

	* app/menus/menus.c (menus_clear): overwrite the menurc with the
	systemwide default. Only if that fails, delete the menurc file.

	* app/dialogs/preferences-dialog.c: string change.
